# vibesql

./: Cargo.toml  TPC-H_SUBQUERY_VALIDATION.md
crates/vibesql-executor/src/evaluator/combined/: subqueries.rs
crates/vibesql-executor/src/optimizer/: mod.rs  subquery_to_join.rs
crates/vibesql-executor/src/optimizer/subquery_rewrite/: correlation.rs  mod.rs
crates/vibesql-executor/src/select/columnar/: simd_aggregate.rs
crates/vibesql-executor/src/select/executor/: execute.rs
crates/vibesql-executor/src/tests/: mod.rs  scalar_subquery_caching_tests.rs
crates/vibesql-executor/tests/: tpch_subquery_tests.rs
tests/: aggregate_random_patterns.rs  sqllogictest_runner.rs
