[package]
name = "vibesql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SQL database engine with SQL:1999 compliance"
keywords = ["sql", "database", "query", "engine"]
categories = ["database"]

[features]
memory-tracking = ["memory-stats"]

[dependencies]
vibesql-types = { version = "0.1.0", path = "crates/vibesql-types" }
vibesql-ast = { version = "0.1.0", path = "crates/vibesql-ast" }
vibesql-catalog = { version = "0.1.0", path = "crates/vibesql-catalog" }
vibesql-storage = { version = "0.1.0", path = "crates/vibesql-storage" }
vibesql-executor = { version = "0.1.0", path = "crates/vibesql-executor" }
vibesql-parser = { version = "0.1.0", path = "crates/vibesql-parser" }
memory-stats = { version = "1.0", optional = true }

[dev-dependencies]
regex = "1.10"
sqllogictest = "0.28"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
glob = "0.3"
md-5 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"

[workspace]
members = [
    "crates/vibesql-parser",
    "crates/vibesql-types",
    "crates/vibesql-ast",
    "crates/vibesql-catalog",
    "crates/vibesql-storage",
    "crates/vibesql-executor",
    "crates/vibesql-cli",
    "crates/vibesql-wasm-bindings",
    "crates/vibesql-python-bindings",
    "crates/sqllogictest",
]
default-members = ["crates/vibesql-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["vibesql contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rjwalters/vibesql"

[workspace.dependencies]
# Will add dependencies as needed for each phase
pyo3 = { version = "0.27", features = ["extension-module"] }

[[test]]
name = "sqllogictest_suite"
path = "tests/sqllogictest_suite.rs"
harness = false

[[test]]
name = "e2e_data_types"
path = "tests/e2e_data_types/mod.rs"

[[test]]
name = "test_revoke_nonexistent"
path = "tests/test_revoke_nonexistent.rs"

[[test]]
name = "test_issue_1618"
path = "tests/test_issue_1618.rs"

[[test]]
name = "aggregate_random_patterns"
path = "tests/aggregate_random_patterns.rs"

[patch.crates-io]
sqllogictest = { path = "crates/sqllogictest" }
